--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <section class="main">
       <div class="container">
-        <form class="" action="index.html" method="post">
+        <!-- <form> -->
           <div class="row">
             <div class="col-lg-12 col-md-12  col-sm-12">
               <span id="content">0</span>
@@ -28,7 +28,7 @@
               </div>
             </div>
           </div>
-        </form>
+        <!-- </form> -->
       </div>
     </section>
     <footer>
