--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="./images/favicon.png">
     <title>Number Generator</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   </head>
   <body>
     <header>
-      <nav class="navbar sticky-top navbar-dark bg-dark">
+      <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Random Generator</a>
       </nav>
     </header>
     <section class="main">
       <div class="container">
         <!-- <form> -->
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col-lg-12 col-md-12  col-sm-12">
               <span id="content">0</span>
             </div>
@@ -23,8 +24,8 @@
               <div class="form-read">
                 <div class="text-left"><label for="text-input">Limit</label></div>
                 <input class="form-control" id="text-input" type="number" placeholder="Enter the limit here ...">
-                <button type="submit" class="btn btn-dark" onclick="ran_generator();">Submit</button>
-                <button type="clear" class="btn btn-dark">Clear</button>
+                <button type="button" class="btn btn-dark" onclick="ran_generator();">Submit</button>
+                <button type="button" class="btn btn-dark" onclick="clr_all();">Clear</button>
               </div>
             </div>
           </div>
