--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </div>
             <div class="col-lg-12 col-md-12  col-sm-12">
               <div class="form-read">
-                <div class="text-left"><label for="text-input">Limit</label></div>
-                <input class="form-control" id="text-input" type="number" placeholder="Enter the limit here ...">
+                <div class="text-left"><label for="texts-input">Limit</label></div>
+                <input class="form-control" id="text-input" type="number">
                 <button type="button" class="btn btn-dark" onclick="ran_generator();">Submit</button>
-                <button type="button" class="btn btn-dark" onclick="clr_all();">Clear</button>
+                <button type="button" class="btn btn-dark" onclick="clr_all();return false;">Clear</button>
               </div>
             </div>
           </div>
@@ -36,8 +36,8 @@
       Copyright &copy; 2020 | Anas Vakyathodi
     </footer>
     <script src="./js/scripts.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" ></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js""></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js""></script> -->
   </body>
 </html>
