--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
               <div class="form-read">
                 <div class="text-left"><label for="texts-input">Limit</label></div>
                 <input class="form-control" id="text-input" type="number">
-                <button type="button" class="btn btn-dark" onclick="ran_generator();">Submit</button>
-                <button type="button" class="btn btn-dark" onclick="clr_all();return false;">Clear</button>
+                <button type="button" class="btn btn-dark" id="gen_button">Generate</button>  <!--onclick="ran_generator();" -->
+                <button type="button" class="btn btn-dark" id="clr_button">Clear</button>    <!-- onclick="clr_all();return false;" -->
               </div>
             </div>
           </div>
