--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <script data-ad-client="ca-pub-1850733742011558" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="shortcut icon" href="./images/favicon.png">
     <title>Number Generator</title>
     <link rel="stylesheet" href="./css/styles.css">
